[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "tuples" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "canvas"
harness = false

[[test]]
name = "matrix"
harness = false